CSRF security implemented + role management + @PreAuthorized