@@ -2,10 +2,11 @@ package org.spring.SpringSecurityApp.security;
 
 import org.spring.SpringSecurityApp.models.Person;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 
 public class PersonDetails implements UserDetails {
 
@@ -17,7 +18,7 @@ public class PersonDetails implements UserDetails {
 
   @Override
   public Collection<? extends GrantedAuthority> getAuthorities() {
-    return List.of();
+    return Collections.singletonList(new SimpleGrantedAuthority(person.getRole()));
   }
 
   @Override
